[gd_scene load_steps=4 format=3 uid="uid://cad6g1dyw0uo6"]

[ext_resource type="Script" uid="uid://bwijngs3yowc5" path="res://scripts/rapid_response_ui.gd" id="1_rapid"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_decline"]
bg_color = Color(1, 0.219608, 0.219608, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_accept"]
bg_color = Color(0.305882, 0.8, 0.639216, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[node name="RapidResponseUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_rapid")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0588235, 0.0862745, 0.141176, 1)

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TopStats" type="HBoxContainer" parent="MainVBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="StreakLabel" type="Label" parent="MainVBox/TopStats"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.54902, 0.258824, 1)
theme_override_font_sizes/font_size = 24
text = "üî• Streak: 0"

[node name="Spacer" type="Control" parent="MainVBox/TopStats"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="HeroesLabel" type="Label" parent="MainVBox/TopStats"]
layout_mode = 2
theme_override_colors/font_color = Color(0.305882, 0.8, 0.639216, 1)
theme_override_font_sizes/font_size = 20
text = "üë• 3/3"

[node name="ZoneSelectorContainer" type="Control" parent="MainVBox"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 0

[node name="MissionCardContainer" type="CenterContainer" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer" type="Control" parent="MainVBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 0

[node name="ButtonRow" type="HBoxContainer" parent="MainVBox"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="DeclineButton" type="Button" parent="MainVBox/ButtonRow"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_decline")
text = "‚ùå
DECLINE"

[node name="AcceptButton" type="Button" parent="MainVBox/ButtonRow"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_accept")
text = "‚úÖ
SELECT
HERO"

[node name="ActiveMissionsSection" type="VBoxContainer" parent="MainVBox"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Header" type="Label" parent="MainVBox/ActiveMissionsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.85098, 1, 1)
theme_override_font_sizes/font_size = 18
text = "üöÄ ACTIVE MISSIONS"
horizontal_alignment = 1

[node name="ActiveMissionsPanel" type="VBoxContainer" parent="MainVBox/ActiveMissionsSection"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1
